--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@
 }
 body{
     background-color: hsl(235, 18%, 26%);
-    font-family: Roboto Regular;
+    font-family: "Roboto";
     color:hsl(234, 29%, 20%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 30px;
     min-height: 100vh;
 }
-img{
+picture{
     max-width: 100%;
     
 }
@@ -34,7 +36,9 @@ img{
 }
 .left-side h1{
     margin-bottom: 30px;
-    font-family: Roboto Bold;
+    font-size: 40px;
+    font-family: "Roboto";
+    font-weight:bold;
 }
 .left-side p{
     margin-bottom: 20px;
@@ -62,10 +66,12 @@ input{
     border: 1px solid hsl(231, 7%, 60%);
     border-radius: 5px;
     outline: none;
+    color: hsl(234, 29%, 20%);
+    font-family: "Roboto";
 }
 #email-label{
     
-    font-family: Roboto Bold !important;
+    font-family: "Roboto" !important;
     font-weight: 900;
 }
 button{
@@ -75,9 +81,33 @@ button{
     border-radius: 5px;
     color: white;
     border: none;
-    background-image: linear-gradient(270deg,hsl(4, 90%, 80%),hsl(4, 100%, 67%));
+    background-color: hsl(235, 18%, 26%);
 }
 button:hover{
     cursor: pointer;
-    background-image: linear-gradient(270deg,orange,hsl(4, 100%, 67%));
+    opacity: 0.8;
+}
+
+#successIcon{
+    width: 30px;
+}
+#successId{
+    font-size: 50px;
+}
+.attribution { font-size: 11px; text-align: center; color:white;
+}
+    .attribution a { color:orange; }
+
+@media screen and (max-width:600px){
+    .container{
+        width: 90%;
+        display: flex;
+        flex-direction: column-reverse;
+        gap:20px;
+    }
+    .left-side{
+        width: 100%;
+        padding-top: 0;
+        padding-left: 0;
+    }
 }
